Update my profile in index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <td width="350"><img width="300" height="400" src="https://unsplash.com/photos/shallow-focus-photo-of-woman-in-gray-jacket-0Zx1bDv5BNY" alt=""></td>
             <td>
                 <h2><b>Name:</b></h2> Win La Pyae <br>
+                <h2><b>Nickname:</b></h2> Moon <br>
                 <h2><b>Email:</b></h2> <a href="mailto:s6507012660290@email.kmutnb.ac.th">s6507012660290@email.kmutnb.ac.th</a> <br>
                 <h2><b>Facebook:</b></h2> <a href="http://www.facebook.com" target="_blank">Moon.LP@FB</a> <br>
                 <h2><strong>Mobile:</strong></h2> 09-xxxx-0023 <br>
